--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public folder should be tracked for React apps
+# public
 
 # Storybook build outputs
 .out
