--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-website",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://Pradhan200.github.io/Portfolio/",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,6 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build && copy build\\index.html build\\404.html",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.8"
   }
